# aitrack

./: CMakeLists.txt  README.md
AITracker/src/: filters.cpp  model.cpp  model.h
Client/src/: Main.cpp
Client/src/camera/: Camera.h  CameraFactory.cpp  NullCamera.h  OCVCamera.cpp  OCVCamera.h  Ps3Camera.cpp  Ps3Camera.h
Client/src/model/: UDPSender.cpp  UDPSender.h  UpdateChecker.cpp  UpdateChecker.h
Client/src/presenter/: presenter.cpp  presenter.h
Client/src/tracker/: TrackerFactory.cpp
Client/src/view/: WindowMain.cpp  WindowMain.h
PS3Driver/src/: ps3eye.cpp  ps3eye_capi.cpp
models/: LICENSE
